# log-viewer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  log-viewer-1789d1a673e60559.js  log-viewer-1789d1a673e60559_bg.wasm  log-viewer-1b45dfcccb9f567b.js  log-viewer-1b45dfcccb9f567b_bg.wasm  log-viewer-1d03acf6bd602a6b.js  log-viewer-1d03acf6bd602a6b_bg.wasm  log-viewer-1ef437457939020b.js  log-viewer-1ef437457939020b_bg.wasm  log-viewer-24f350d401b4db5d.js  log-viewer-24f350d401b4db5d_bg.wasm  log-viewer-258f0da16671eaad.js  log-viewer-258f0da16671eaad_bg.wasm  log-viewer-273903955a41b18.js  log-viewer-273903955a41b18_bg.wasm  log-viewer-27f8f43d2c490d78.js  log-viewer-27f8f43d2c490d78_bg.wasm  log-viewer-31d3d0d6382b2d1b.js  log-viewer-31d3d0d6382b2d1b_bg.wasm  log-viewer-33a8534615db937b.js  log-viewer-33a8534615db937b_bg.wasm  log-viewer-3d771b1e3b653077.js  log-viewer-3d771b1e3b653077_bg.wasm  log-viewer-4035f948867f603c.js  log-viewer-4035f948867f603c_bg.wasm  log-viewer-42a73ac879ed68da.js  log-viewer-42a73ac879ed68da_bg.wasm  log-viewer-4998f188f4b7e931.js  log-viewer-4998f188f4b7e931_bg.wasm  log-viewer-4a7fde565c62feb8.js  log-viewer-4a7fde565c62feb8_bg.wasm  log-viewer-4ed1c339eac7e9f_bg.wasm  log-viewer-50ed9270f9485f60.js  log-viewer-50ed9270f9485f60_bg.wasm  log-viewer-5380280e345ab764.js  log-viewer-5380280e345ab764_bg.wasm  (+98 more)
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
examples/: terminal.rs
src/: context_menu.rs  gist.rs  info_node.rs  level_filter.rs  level_picker.rs  lib.rs  main.rs  pill.rs  proto.rs  state.rs
src/proto/: log_level.rs
