[package]
name = "log-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.10"
yew = { version = "0.20", git = "https://github.com/yewstack/yew.git", features = [
    "csr",
] }
web-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "0.8.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
anyhow = "1.0"
lazy_static = { version = "1.4" }
