[package]
name = "log-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.12"
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "0.11.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
anyhow = "1.0"
lazy_static = { version = "1.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
pretty_env_logger = "0.5.0"
